Fixed z-index issue and version locked postcss, cssnano, and autoprefixer by using npm locally instead of globally and updating the Savant build file to use the local version

--- a/_sass/application.scss
+++ b/_sass/application.scss
@@ -418,7 +418,7 @@ body > main {
       position: fixed;
       top: 45px; /* height of header.app-header */
       width: 100%;
-      z-index: 2; /* One higher than panel / chart toggle */
+      z-index: $layer-9; /* One higher than panel / chart toggle */
 
       @media (min-width: 992px) {
         width: calc(100% - 225px);
