--- a/_sass/chart.scss
+++ b/_sass/chart.scss
@@ -2,6 +2,7 @@
  * Copyright (c) 2017-2018, Inversoft Inc., All Rights Reserved
  */
 
+@import 'layers';
 @import 'mixins';
 @import 'variables';
 
@@ -14,7 +15,7 @@ label.panel-toggle {
   border-radius: 2px;
   float: right;
   padding: 0;
-  z-index: 1;
+  z-index: $layer-1;
 
   a {
     background: white;
