--- a/_sass/layers.scss
+++ b/_sass/layers.scss
@@ -15,3 +15,7 @@ $layer-7: 70;
 $layer-8: 80;
 $layer-9: 90;
 $layer-10: 100;
+$layer-tooltip: 1000;
+$layer-multiple-select: 100;
+$layer-date-picker: 3000;
+$layer-date-picker-fields: 3001;
