--- a/_sass/tooltip.scss
+++ b/_sass/tooltip.scss
@@ -2,6 +2,7 @@
  * Copyright (c) 2017-2018, Inversoft Inc., All Rights Reserved
  */
 
+@import 'layers';
 @import 'mixins';
 @import 'variables';
 
@@ -14,7 +15,7 @@
   position: fixed;
   text-align: center;
   max-width: 150px;
-  z-index: 1000;
+  z-index: $layer-tooltip;
 
   &.wide {
     max-width: 350px;
